fixed light and dark mode in css, but the theme switch button functionality is still in progress

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,26 @@
 	--color-base-text: rgb(18, 18, 18);
 	--color-btn-bg: rgb(220, 220, 220);
 	--theme-name: "light";
+	--svg-fill: #ffffff;
+	--right-container-color: #e2e8f0;
+	--header-color: #ffffff;
+	--sidebar-color: #ffffff;
+	--theme-name: "light";
+}
+@media (prefers-color-scheme: dark) {
+	:root {
+	  --border-btn: 1px solid rgb(220, 220, 220);
+	  --color-base-bg: rgb(18, 18, 18);
+	  --color-base-text: rgb(240, 240, 240);
+	  --color-btn-bg: rgb(36, 36, 36);
+	  --theme-name: "dark";
+	  --svg-fill: #000000;
+	  --right-container-color: #232327;
+	  --header-color: #181818;
+	  --sidebar-color: #000000;
+	  --theme-name: "dark";
+	}
+	
   }
   
   body {
@@ -49,15 +69,15 @@ button:hover, input:hover {
 
 #sidebar {
 	background-color: #1992d4;
-	color: #ffffff;
+	color: var(--sidebar-color);
 }
 
 #right-container {
-	background-color: #e2e8f0;
+	background-color: var(--right-container-color);
 }
 
 #header {
-	background-color: #ffffff;
+	background-color: var(--header-color);
 }
 
 
@@ -87,32 +107,12 @@ button, input {
 }
 
 svg > path{
-	fill: #ffffff;
+	fill: var(--svg-fill);
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-	  --border-btn: 1px solid rgb(220, 220, 220);
-	  --color-base-bg: rgb(18, 18, 18);
-	  --color-base-text: rgb(240, 240, 240);
-	  --color-btn-bg: rgb(36, 36, 36);
-	  --theme-name: "dark";
-	}
-	svg > path{
-		fill: #000000;
-	}
-	#right-container {
-		background-color: #232327;
-	}
-	
-	#header {
-		background-color: #181818;
-	}
-	#sidebar {
-		color: #000000;
-	}
-  }
-  
-  .theme-name::after {
-	content: var(--theme-name);
-  }
+/*
+svg > path{
+	fill: #ffffff;
+}
+*/
+
